Jake carries now a standalone Variant of Lilly which will automatically Update if the included Version is newer (currently it will update based on the tree-update)
Signed-off-by: EagleoutIce <maeusepiep99@web.de>